# diff-viewer-extension

./: .gitignore  .pnp.cjs  README.md  craco.config.js  index.html  jest.mockundefined.js  manifest.config.js  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  playwright.yml
public/: index.html  manifest.json
src/: App.test.tsx  App.tsx  github-injection.d.ts  index.tsx  setupTests.ts
src/chrome/: background.ts  content.ts  diff.test.ts  diff.ts  kittycad.ts  messages.ts  storage.test.ts  storage.ts  types.ts  web.test.ts  web.ts
src/components/: CadDiff.test.tsx  CadDiff.tsx  Loading.test.tsx  Loading.tsx  Settings.test.tsx  Settings.tsx  TokenForm.test.tsx  TokenForm.tsx  UserCard.test.tsx  UserCard.tsx
src/components/Viewer3D/: CameraControls.tsx  Model.tsx  OrthoPerspectiveCamera.tsx  ViewerSTL.tsx
src/components/diff/: BaseModel.tsx  BeforeAfterModel.tsx  CadBlob.tsx  CadBlobPage.tsx  CadDiff.test.tsx  CadDiff.tsx  CadDiffPage.tsx  Camera.tsx  CameraControls.tsx  CombinedModel.tsx  Controls.tsx  ErrorMessage.tsx  Legend.tsx  LegendLabel.tsx  SourceRichToggle.test.tsx  SourceRichToggle.tsx  UnifiedModel.tsx  Viewer3D.tsx  ViewerSTL.tsx  WireframeModel.tsx
src/components/settings/: Settings.test.tsx  Settings.tsx  TokenForm.test.tsx  TokenForm.tsx  UserCard.test.tsx  (+1 more)
src/utils/: three.test.ts  three.ts
src/wasm-lib/: Cargo.toml
src/wasm-lib/src/: lib.rs
tests/: example.spec.ts  extension.spec.ts  fixtures.ts
(+13 files in other folders)
